2007-11-01  Matthew Barnes  <mbarnes@redhat.com>

	* e-msg-composer.c (e_msg_composer_set_body_text):
	Don't compare a character pointer to a string literal.

2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>

	* e-msg-composer.c: Remove one more unused header.

2007-10-30  Kjartan Maraas  <kmaraas@gnome.org>

	* e-msg-composer-hdrs.c: Remove unneeded include

2007-10-25  Kjartan Maraas  <kmaraas@gnome.org>

	* e-msg-composer.c:
	* e-msg-composer.h:
	* listener.c: 
	Warning fixes.
	- NULL vs. 0
	- ANSIfication of declarations
	- mixing code and declarations

2007-10-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #412360

	* e-msg-composer-hdrs.c: (entry_query_tooltip):
	New callback to query tooltip over GtkEntry.
	* e-msg-composer-hdrs.c: (connect_entry_for_tooltip):
	New function to connect GtkEntry to previous function and let it works.
	* e-msg-composer-hdrs.c: (create_addressbook_entry), (create_headers):
	Connect entries for tooltips.

2007-10-03  Matthew Barnes  <mbarnes@redhat.com>

	* e-msg-cmposer.c:
	Remove the entry_pixcache array to silence the run-time warnings
	when opening a new composer window.  The composer seems to work
	fine without them; not sure why it was needed in the first place.

2007-10-02  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #469657

	* e-msg-composer.c:
	Use destroy functions in GHashTables to simplify memory management.

2007-09-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #477045

	* e-msg-composer-select-file.c:
	* e-msg-composer.c:
	Use standard icon names where applicable.

2007-09-14  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #476231

	* e-msg-composer-select-file.c:
	Remove non-USE_GTKFILECHOOSER code.
	GtkFileChooser has been around since 2004.

2007-09-12  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #476040

	* e-msg-composer.c:
	* e-msg-composer-attachment-bar.c:
	Use "mail-attachment" icon instead of "stock_attach".